# realTimeSoundSeparation

./: .gitignore  CMakeLists.txt  README.md  main.cpp
configs/: model.json
examples/: demo.cpp  paex_ocean_shore.c  paex_record.c  paex_record_file.c  patest_wire.cpp  record_multithread.c
include/: nnet.h  record.h
model/: denoise.cpp  main.cpp  nnet.cpp  nnet.h  rnn.cpp  rnn_train.py  separate.cpp  separate.h  tansig_table.h  test.cpp  test.h  vec.h  vec_neon.h
model/include/: nnet.h  rnn.h
model/src/: .gitattributes  denoise.cpp  main.cpp  nnet.cpp  nnet_data.cpp  rnn.cpp
src/: record.cpp
src/hostapi/: pa_util.cpp
